Fixed mobile layout, added JS for checking cover height on mobile

--- a/styles/pages/cover/_cover.scss
+++ b/styles/pages/cover/_cover.scss
@@ -12,6 +12,9 @@ body.home-template {
   height: 100%;
   background-size: cover;
   background-position: 50% 0;
+  opacity: 0;
+
+  @include animation(appear-cover 1s forwards);
 
   &.no-cover {
     background: $cover-color;
@@ -32,8 +35,6 @@ body.home-template {
   display: table;
   width: 100%;
   height: 100%;
-
-  @include animation(appear-cover 1s forwards);
 
   .header {
     height: 33%;
@@ -154,7 +155,7 @@ body.home-template {
 
 }
 
-@media (max-width: $cover-mobile-width) {
+@media (max-width: $cover-mobile-width), (max-height: $cover-mobile-height) {
 
   body.home-template {
       height: auto;
