--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -4,6 +4,7 @@ $post-padding: 0 20px;
 $post-width: 980px;
 $post-mobile-width: 400px;
 $cover-mobile-width: 555px;
+$cover-mobile-height: 415px;
 
 $share-count: 3;
 $share-font-size: 40px;
